syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.History";
package CecoChat.Contracts.History;
import "google/protobuf/timestamp.proto";
import "History/HistoryMessage.proto";

service History {
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);
}

message GetHistoryRequest {
  int64 other_user_id = 1;
  google.protobuf.Timestamp older_than = 2;
}

message GetHistoryResponse {
  repeated HistoryMessage messages = 1;
}
